// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return total count and amount 1`] = `
<div>
  <h3>
    viewing 3 expenses totaling: $150.00
  </h3>
</div>
`;

exports[`should return total count and amount for no expenses 1`] = `
<div>
  <h3>
    viewing 0 expense totaling: $0.00
  </h3>
</div>
`;

exports[`should return total count and amount fro one expense 1`] = `
<div>
  <h3>
    viewing 1 expense totaling: $15.11
  </h3>
</div>
`;
